[tool.poetry]
name = "voicemodtask"
version = "0.1.0"
description = ""
authors = ["Kieran Mc Granaghan <kieranmcg1@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydub = "^0.25.1"
numpy = "^1.26.4"
librosa = "^0.10.1"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
